# openapi_server/openapi/openapi.yaml
@@ -43,6 +43,43 @@ paths:
       - file
       x-openapi-router-controller: openapi_server.controllers.file_controller
   /samples:
+    get:
+      description: Return a list of samples based on filtering parameters. If a filter
+        parameter is not supplied, it \ will be interpreted as `either`, not `False`.
+      operationId: samples_get
+      parameters:
+      - explode: true
+        in: query
+        name: has_experiment_id
+        required: false
+        schema:
+          type: boolean
+        style: form
+      - explode: true
+        in: query
+        name: has_isolate_id
+        required: false
+        schema:
+          type: boolean
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Sample'
+                type: array
+          description: OK
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      tags:
+      - sample
+      x-openapi-router-controller: openapi_server.controllers.sample_controller
     post:
       description: Add a new sample.
       operationId: samples_post
